[gd_scene load_steps=16 format=3 uid="uid://cavmo0gvu020i"]

[ext_resource type="PackedScene" uid="uid://cf57h23ilq1xh" path="res://scenes/enemy_base/enemy_base.tscn" id="1_wed03"]
[ext_resource type="Texture2D" uid="uid://d3hareyuojpi5" path="res://assets/enemies/spore_pod.png" id="2_cpd4s"]
[ext_resource type="Script" uid="uid://b10wfen21yiqq" path="res://scenes/spore_pod/spore_pod.gd" id="2_f4mt2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kxv85"]
atlas = ExtResource("2_cpd4s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5n1u"]
atlas = ExtResource("2_cpd4s")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u673"]
atlas = ExtResource("2_cpd4s")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wphjt"]
atlas = ExtResource("2_cpd4s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d77sp"]
atlas = ExtResource("2_cpd4s")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u72ec"]
atlas = ExtResource("2_cpd4s")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol3ln"]
atlas = ExtResource("2_cpd4s")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkk20"]
atlas = ExtResource("2_cpd4s")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjqtn"]
atlas = ExtResource("2_cpd4s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvh5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxv85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5n1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u673")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wphjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d77sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u72ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol3ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkk20")
}],
"loop": false,
"name": &"burst",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjqtn")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpd4s"]
size = Vector2(13, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4mt2"]
size = Vector2(13, 14)

[node name="SporePod" instance=ExtResource("1_wed03")]
script = ExtResource("2_f4mt2")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_wvh5m")
animation = &"burst"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_cpd4s")

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_f4mt2")

[node name="BurstTimer" type="Timer" parent="." index="4"]
wait_time = 2.0
one_shot = true

[node name="SporeTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_burst_timer_timeout"]
[connection signal="timeout" from="SporeTimer" to="." method="_on_spore_timer_timeout"]
